Fixed canvas not showing bug and added mouse position on click calculation

--- a/pix2pix-app/src/stylesheets/app.css
+++ b/pix2pix-app/src/stylesheets/app.css
@@ -24,7 +24,7 @@ button:focus{
 }
 
 #drawing-canvas-col{
-  background-color: lightgreen;
+  /* background-color: lightgreen; */
   padding: 0;
 }
 
