--- a/pix2pix-app/src/stylesheets/drawingCanvas.css
+++ b/pix2pix-app/src/stylesheets/drawingCanvas.css
@@ -1,5 +1,4 @@
 #canvas-wrapper{
     width: 100%;
     height: 100%;
-    background-color: seashell;
 }
